created post & mock API working

--- a/src/assets/scss/base/_global.scss
+++ b/src/assets/scss/base/_global.scss
@@ -42,6 +42,9 @@ button {
   padding: 10px;
   line-height: 1 !important;
 }
+textarea {
+  min-height: 200px;
+}
 .active {
   font-weight: bold;
 }
