--- a/src/assets/scss/modules/_forms.scss
+++ b/src/assets/scss/modules/_forms.scss
@@ -1,5 +1,13 @@
 /* LOGIN / REGISTER */
 .loginRegister {
+  max-width: 1200px;
+  margin: 0px auto;
+  .pageTitle {
+    margin: 1rem 0px;
+    font-size: 2rem;
+    font-weight: 200;
+    color: #111111;
+  }
   .form {
     max-width: 800px;
     .form-item {
