login, register, persistent theme & user DONE, ready for deploying

--- a/src/assets/scss/base/_global.scss
+++ b/src/assets/scss/base/_global.scss
@@ -55,6 +55,9 @@ textarea {
   color: #202020;
 }
 .dark {
+  .pageTitle {
+    color: #e0e0e0 !important;
+  }
   background-color: #202020;
   color: #e0e0e0;
   button {
